[package]
name = "async-datagram"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-datagram"
documentation = "https://docs.rs/async-datagram"
description = "Async datagram traits."
keywords = ["async", "datagram", "udp", "packet", "futures"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
